# gymnure

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  gymnure.h
assets/: cilindre.mtl  cube.mtl  room.blend  room.blend1  room.mtl  room2.mtl
assets/shaders/: Makefile  default.frag  default.vert  deferred.frag  freetype.frag  freetype.vert  mrt_fs.glsl  mrt_vs.glsl  phong.frag  phong.vert  phong_fs.glsl  phong_vs.glsl  skybox.frag
assets/shasta_obj_high/: vue_ready_shasta.mtl
cmake-modules/: FindGLM.cmake  FindIMGUI.cmake  FindMEMANCPP.cmake  FindSDL2.cmake
engine/: CommandBuffers.h
engine/Descriptors/: DescriptorSet.h  Textures.h  UniformBuffer.h
engine/GraphicPipeline/: GraphicPipeline.h
engine/Memory/: Buffer.h  BufferImage.h  Memory.h
engine/Programs/: Phong.h  Program.h  Skybox.h
engine/RenderPass/: FrameBuffer.h  RenderPass.h  Swapchain.h
engine/SyncPrimitives/: SyncPrimitives.h
engine/Util/: Events.h  Layers.h  Util.h
engine/Vertex/: VertexBuffer.h
engine/Window/: Window.h  XcbWindow.h
shaders/: Makefile  frag.spv  freetype.frag  freetype.vert  path_tracing.frag  triangle.frag  triangle.vert  vert.spv
src/: main.cpp
src/engine/: Application.cpp  Application.hpp  ApplicationData.cpp  ApplicationData.hpp  CommandBuffer.cpp  CommandBuffer.h  CommandBuffers.cpp  CommandBuffers.h  Interface.cpp  Interface.hpp  ModelBuffer.cpp  ModelBuffer.hpp
src/engine/Descriptors/: Camera.cpp  Camera.h  DescriptorSet.cpp  DescriptorSet.h  Layout.cpp  Layout.h  Texture.cpp  Texture.hpp  Textures.cpp  Textures.h  UniformBuffer.h
src/engine/GraphicPipeline/: GraphicPipeline.h
src/engine/GraphicsPipeline/: Deferred.cpp  Deferred.hpp  Forward.cpp  Forward.hpp  GraphicsPipeline.cpp  GraphicsPipeline.h  Pipeline.cpp  Pipeline.hpp
src/engine/Memory/: Buffer.cpp  Buffer.h  BufferImage.cpp  BufferImage.h  ImageFormats.cpp  ImageFormats.hpp  Memory.cpp  Memory.h
src/engine/Programs/: Default.hpp  Deferred.hpp  Phong.h  Phong.hpp  Program.cpp  Program.h  Skybox.h
src/engine/RenderPass/: FrameBuffer.cpp  FrameBuffer.h  Queue.cpp  Queue.h  RenderPass.cpp  RenderPass.h  Swapchain.cpp  Swapchain.h
src/engine/SyncPrimitives/: SyncPrimitives.cpp  SyncPrimitives.h
src/engine/Util/: Debug.cpp  Debug.hpp  Layers.cpp  Layers.h  ModelData.hpp  ModelDataLoader.cpp  ModelDataLoader.h  ModelLoader.cpp  ModelLoader.h  Util.cpp  Util.h
src/engine/Vertex/: VertexBuffer.cpp  VertexBuffer.h
src/engine/Window/: SDLWindow.cpp  SDLWindow.hpp  Window.h
